# discord-transcript

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  lefthook.yml
.github/workflows/: ci.yml  docker.yml
assets/: meeting.html
docs/: plan.md
migrations/: 0001_mvp_schema.sql  0002_add_is_noisy.sql  0003_add_meeting_speakers.sql  0004_add_transcript_source.sql
src/: artifact.rs  asr.rs  audio.rs  audit.rs  authz.rs  auto_stop.rs  bot.rs  command.rs  config.rs  domain.rs  integrations.rs  lib.rs  main.rs  meeting_audio.rs  meeting_flow.rs  posting.rs  privacy.rs  queue.rs  receiver.rs  recorder.rs  recording_session.rs  recovery.rs  recovery_runner.rs  retry.rs  runtime.rs  songbird_adapter.rs  speaker.rs  sql.rs  sql_store.rs  stop.rs  storage.rs  storage_fs.rs  summary.rs  transcript.rs  web.rs  worker.rs  workspace.rs
src/application/: bot.rs  command.rs  meeting_flow.rs  mod.rs  recovery_runner.rs  runtime.rs  stop.rs  summary.rs  worker.rs
src/audio/: meeting_audio.rs  mod.rs  receiver.rs  recorder.rs  recording_session.rs  songbird_adapter.rs  wav.rs
src/bootstrap/: config.rs
tests/: asr_summary.rs  command_lifecycle.rs  job_queue.rs  meeting_audio.rs  meeting_flow.rs  mvp_core.rs  ops.rs  privacy.rs  receiver_and_sql_store.rs  recorder_and_artifact.rs  recording_storage.rs  retry_and_songbird.rs  runtime_and_worker.rs  runtime_recording.rs  runtime_scaffold.rs  workspace_layout.rs
web/: biome.jsonc  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+51 files in other folders)
