[package]
name = "discord-transcript"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
hmac = "0.12"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = { version = "0.12.5", features = ["client", "gateway", "model", "rustls_backend"] }
sha2 = "0.10"
songbird = { version = "0.6.0", features = ["serenity", "rustls", "receive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "fs", "net"] }
tokio-postgres = "0.7.15"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
